--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 </head>
 
 <body>
+  <div class="page-wrapper">
+    <header class="header">
+      <h1 class="business"><span class="publishing">ИЗДАТЕЛЬСТВО</span><br><span class="&">&</span><br><span
+          class="printing">ТИПОГРАФИЯ</span></h1>
+    </header>
+  </div>
+  <!-- /.page-wrapper -->
   <script src="js/main.js"></script>
 </body>
 
