--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Yrii Kostitsin</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -12,7 +15,7 @@
 <body>
   <div class="page-wrapper">
     <header class="header">
-      <h1 class="business"><span class="publishing">ИЗДАТЕЛЬСТВО</span><br><span class="&">&</span><br><span
+      <h1 class="business"><span class="publishing">ИЗДАТЕЛЬСТВО</span><br><span class="connector">&</span><br><span
           class="printing">ТИПОГРАФИЯ</span></h1>
     </header>
   </div>
