--- a/index.html
+++ b/index.html
@@ -15,9 +15,18 @@
 <body>
   <div class="page-wrapper">
     <header class="header">
-      <h1 class="business"><span class="publishing">ИЗДАТЕЛЬСТВО</span><br><span class="connector">&</span><br><span
-          class="printing">ТИПОГРАФИЯ</span></h1>
+      <h2 class="business"><span class="publishing">ИЗДАТЕЛЬСТВО</span><br><span class="connector">&</span><br><span
+          class="printing">ТИПОГРАФИЯ</span></h2>
     </header>
+
+    <div class="container">
+      <div class="logo-name">
+        <img width="65" height="65" src="img/logo.png" class="logo" alt="Старый дед">
+        <h1 class="name">СТАРЫЙ ДЕДЪ</h1>
+      </div>
+      <!-- /.logo-name -->
+    </div>
+    <!-- /.container -->
   </div>
   <!-- /.page-wrapper -->
   <script src="js/main.js"></script>
