--- a/index.html
+++ b/index.html
@@ -25,6 +25,29 @@
         <h1 class="name">СТАРЫЙ ДЕДЪ</h1>
       </div>
       <!-- /.logo-name -->
+      <div class="card">
+        <div class="info">
+          <div class="info-text">
+            <img src="/img/icons/01.png" alt="01">
+            <p>Мы издаем и печатаем книги любым тиражом</p>
+          </div>
+          <div class="info-text">
+            <img src="/img/icons/02.png" alt="01">
+            <p>Мы предоставляем авторам полный спектр издательских услуг</p>
+          </div>
+          <div class="info-text">
+            <img src="/img/icons/03.png" alt="01">
+            <p>Собственная типография позволяет нам обеспечивать низкие цены и минимальные сроки</p>
+          </div>
+
+        </div>
+        <div class="slider">
+          <div class="info-slider"><img src="img/slider.png" alt="slider"></div>
+
+        </div>
+        <!-- /.info -->
+      </div>
+      <!-- /.card -->
     </div>
     <!-- /.container -->
   </div>
