--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
       <h2 class="business"><span class="publishing">ИЗДАТЕЛЬСТВО</span><br><span class="connector">&</span><br><span
           class="printing">ТИПОГРАФИЯ</span></h2>
     </header>
-
     <div class="container">
       <div class="logo-name">
         <img width="65" height="65" src="img/logo.png" class="logo" alt="Старый дед">
@@ -39,13 +38,20 @@
             <img src="/img/icons/03.png" alt="01">
             <p>Собственная типография позволяет нам обеспечивать низкие цены и минимальные сроки</p>
           </div>
-
+          <!-- /.info -->
         </div>
         <div class="slider">
           <div class="info-slider"><img src="img/slider.png" alt="slider"></div>
-
+          <div class="dot-selector">
+            <div class="dot dark"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
+          </div>
         </div>
-        <!-- /.info -->
+
       </div>
       <!-- /.card -->
     </div>
