--- a/index.html
+++ b/index.html
@@ -51,7 +51,20 @@
             <div class="dot"></div>
           </div>
         </div>
-
+        <div class="full-buttons">
+          <a href="#" class="button feedback">Отзывы клиентов</a>
+          <a href="#" class="button vk"><span><img src="/img/icons/vk.svg" alt="vk">Наша группа</a></span>
+        </div>
+        <div class="buttons">
+          <a href="#" class="button telegram">
+            <img src="/img/icons/telegram.svg" alt="telegram" class="button-icon">
+          </a>
+          <a href="#" class="button whatsapp">
+            <img src="/img/icons/whatsapp.svg" alt="whatsapp" class="button-icon">
+          </a>
+          <a href="#" class="button youtube"><img src="/img/icons/youtube.svg" alt="youtube" class="button-icon"></a>
+        </div>
+        <!-- /.buttons -->
       </div>
       <!-- /.card -->
     </div>
